default/objects/Bank_Account__c/fields/Active_Since_At_Least__c.field-meta.xml
<CustomField>
    <fullName>Active_Since_At_Least__c</fullName>
    <label>Active Since At Least</label>
    <length>20</length>
    <type>Text</type>
</CustomField>