default/objects/Bank_Account__c/fields/Currency_Funds_Available__c.field-meta.xml
<CustomField>
    <fullName>Currency_Funds_Available__c</fullName>
    <label>Currency Funds Available</label>
    <length>50</length>
    <type>Text</type>
</CustomField>