default/objects/Bank_Account__c/fields/Currency_Name__c.field-meta.xml
<CustomField>
    <fullName>Currency_Name__c</fullName>
    <label>Currency Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>