default/objects/Bank_Account__c/fields/Direct_Debit_Available__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Available__c</fullName>
    <label>Direct Debit Available</label>
    <length>10</length>
    <type>Text</type>
</CustomField>