default/objects/Bank_Account__c/fields/Friendly_Name__c.field-meta.xml
<CustomField>
    <fullName>Friendly_Name__c</fullName>
    <label>Friendly Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>