default/objects/Bank_Account__c/fields/Iban__c.field-meta.xml
<CustomField>
    <fullName>Iban__c</fullName>
    <label>Iban</label>
    <length>50</length>
    <type>Text</type>
</CustomField>