default/objects/Bank_Account__c/fields/Internal_Number__c.field-meta.xml
<CustomField>
    <fullName>Internal_Number__c</fullName>
    <label>Internal Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>