default/objects/Bank_Account__c/fields/Transactions_Report__c.field-meta.xml
<CustomField>
    <fullName>Transactions_Report__c</fullName>
    <label>Transactions Report</label>
    <referenceTo>Transactions_Report__c</referenceTo>
    <relationshipLabel>Bank Accounts</relationshipLabel>
    <relationshipName>Bank_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>